test/corpus/instr_and_reg.test
==========
Instruction -- No args
==========
MOVLPS
---

(program
  (instruction
    kind: (word)))

==========
Instruction -- One reg arg
==========
pushq %rbp
---

(program
  (instruction
    kind: (word)
    (ident
      (reg))))

==========
Instruction -- Two reg args
==========
pushq %rbp, %rbp
---

(program
  (instruction
    kind: (word)
    (ident
      (reg))
    (ident
      (reg))))

==========
Instruction -- Pointer offset arg, reg arg
==========
movzbl	-1(%rbp), %eax
---

(program
  (instruction
    (word)
    (ptr
      (int
        (prefix_operator))
      (reg))
    (ident
      (reg))))

==========
Instruction -- Integer immediate arg, reg arg (GAS x86)
==========
andl	$15, %eax
---

(program
  (instruction
    kind: (word)
    (int)
    (ident
      (reg))))

==========
Instruction -- Reg arg, Integer immediate arg (ARM A64)
==========
mov X10, #1
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (int)))

==========
Instruction -- Reg arg, reg arg, address pointer with register and negative integer immediate arg, followed by exclmation mark (ARM A64)
==========
stp w0, w1, [sp, #-16]!
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (int
        (prefix_operator)))))

==========
Instruction -- Reg arg, address pointer with register and integer immediate arg (ARM A64)
==========
ldr x8, [sp, #8]
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (int))))

==========
Instruction -- Reg arg, address pointer with register only (ARM A64)
==========
ldr x8, [sp]
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word)))))

==========
Instruction -- Reg arg, section address arg (ARM A64)
==========
adr X1, helloworld
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ident
      (reg
        (word)))))

==========
Instruction -- List of registers with range (ARMv7)
==========
PUSH { V1, V2, V3-V5, LR }
---

(program
  (instruction
    (word)
    (list
      (reg
        (word))
      (reg
        (word))
      (reg
        (word))
      (reg
        (word))
      (reg
        (word)))))

==========
Instruction -- Section address arg, reg arg (GAS x86)
==========
mov $msg, %ecx
---

(program
  (instruction
    (word)
    (ident
      (reg
        (address)))
    (ident
      (reg))))

==========
Instruction -- Dotted label arg
==========
jne	.L5
---

(program
  (instruction
    kind: (word)
    (ident)))

==========
Instruction -- Reg arg, address arg (ARMv7)
==========
LDR A1, =addr
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ident
      (reg
        (address)))))

==========
Instruction -- mov from offset label (GAS x86)
==========
mov rsi, offset notImplemented
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (word)))

==========
Instruction -- mov from offset label (GAS x86)
==========
mov rsi, OFFSET notImplemented
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (word)))

==========
Instruction -- Memory addressing source omission of DISP and SCALE (x86 AT&T)
==========
leaq (%rdi, %rdi, ), %rdi
---

(program
  (instruction
    (word)
    (ptr
      (reg)
      (reg))
    (ident
      (reg))))

==========
Instruction -- Memory addressing source omission of SCALE (x86 AT&T)
==========
leaq 5(%rdi, %rdi, ), %rdi
---

(program
  (instruction
    (word)
    (ptr
      (int)
      (reg)
      (reg))
    (ident
      (reg))))

==========
Instruction -- Memory addressing source omission of BASE and SCALE (x86 AT&T)
==========
leaq 5(, %rdi, ), %rdi
---

(program
  (instruction
    (word)
    (ptr
      (int)
      (reg))
    (ident
      (reg))))

==========
Instruction -- Memory addressing source omission of DISP, BASE and SCALE (x86 AT&T)
==========
leaq (, %rdi, ), %rdi
---

(program
  (instruction
    (word)
    (ptr
      (reg))
    (ident
      (reg))))

==========
Instruction -- Memory addressing source omission of DISP and BASE (x86 AT&T)
==========
leaq (, %rdi, 4), %rdi
---

(program
  (instruction
    (word)
    (ptr
      (reg)
      (scale))
    (ident
      (reg))))

==========
Instruction -- Memory addressing source omission of BASE (x86 AT&T)
==========
leaq 4(, %rdi, 4), %rdi
---

(program
  (instruction
    (word)
    (ptr
      (int)
      (reg)
      (scale))
    (ident
      (reg))))

==========
Instruction -- Memory addressing destination omission of DISP and SCALE (x86 AT&T)
==========
movq $rax, (%rdi, %rdi, )
---

(program
  (instruction
    (word)
    (ident
      (reg
        (address)))
    (ptr
      (reg)
      (reg))))

==========
Instruction -- Memory addressing destination omission of DISP, BASE and SCALE (x86 AT&T)
==========
movq $rax, (, %rdi, )
---

(program
  (instruction
    (word)
    (ident
      (reg
        (address)))
    (ptr
      (reg))))

==========
Instruction -- Memory addressing destination omission of BASE and SCALE (x86 AT&T)
==========
movq $rax, 1(, %rdi, )
---

(program
  (instruction
    (word)
    (ident
      (reg
        (address)))
    (ptr
      (int)
      (reg))))

==========
Instruction -- Memory addressing destination omission of DISP and BASE (x86 AT&T)
==========
movq $rax, (, %rdi, 8)
---

(program
  (instruction
    (word)
    (ident
      (reg
        (address)))
    (ptr
      (reg)
      (scale))))

==========
Instruction -- Memory addressing destination omission of BASE (x86 AT&T)
==========
movq $rax, 4(, %rdi, 8)
---

(program
  (instruction
    (word)
    (ident
      (reg
        (address)))
    (ptr
      (int)
      (reg)
      (scale))))

==========
Instruction -- Negative constant arg
==========
movq $-1, %rax
---

(program
  (instruction
    (word)
    (int
      (prefix_operator))
    (ident
      (reg))))

==========
Instruction -- Memory addressing source with base, index and scale (x86 intel)
==========
mov rax, [rsp+rax*8]
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (reg
        (word))
      (scale))))

==========
Instruction -- Memory addressing source with base, index and scale different order (x86 intel)
==========
mov rax, [rax*8+rsp]
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (scale)
      (reg
        (word)))))

==========
Instruction -- Memory addressing source with index and scale (x86 intel)
==========
mov rax, [rax*8]
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (scale))))

==========
Instruction -- Memory addressing source with index and scale different order (x86 intel)
==========
mov rax, [8*rax]
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (scale)
      (reg
        (word)))))
