test/corpus/macro.test
==========
Macro -- use macro Parameters
==========
mov rax, \parm
---

(program
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ident
      (reg
        (macro_arg)))))

==========
Macro -- simple macro
==========
.macro foo r
mov \r, 0
.endm
---

(program
  (meta
    (meta_ident)
    (ident
      (reg
        (word)))
    (macro_arg_def
      (ident
        (reg
          (word)))))
  (instruction
    (word)
    (ident
      (reg
        (macro_arg)))
    (int))
  (meta
    (meta_ident)))

==========
Macro -- simple macro multi args
==========
.macro foo r, v
mov \r, \v
.endm
---

(program
  (meta
    (meta_ident)
    (ident
      (reg
        (word)))
    (macro_arg_def
      (ident
        (reg
          (word))))
    (macro_arg_def
      (ident
        (reg
          (word)))))
  (instruction
    (word)
    (ident
      (reg
        (macro_arg)))
    (ident
      (reg
        (macro_arg))))
  (meta
    (meta_ident)))

==========
Macro -- example macro of gas doc
==========
.macro  sum from=0, to=5
.long   \from
.if     \to-\from
sum     "(\from+1)",\to
.endif
.endm
---

(program
  (meta
    (meta_ident)
    (ident
      (reg
        (word)))
    (macro_arg_def
      (ident
        (reg
          (word)))
      (macro_arg_value
        (int)))
    (macro_arg_def
      (ident
        (reg
          (word)))
      (macro_arg_value
        (int))))
  (meta
    (meta_ident)
    (ident
      (reg
        (macro_arg))))
  (meta
    (meta_ident)
    (op_expr
      (ident
        (reg
          (macro_arg)))
      (infix_operator)
      (ident
        (reg
          (macro_arg)))))
  (instruction
    (word)
    (string)
    (ident
      (reg
        (macro_arg))))
  (meta
    (meta_ident))
  (meta
    (meta_ident)))

==========
Macro -- use offset as macro_arg
==========
.macro useOffset offset
mov    rdi, [r11*\offset]
.endm
---

(program
  (meta
    (meta_ident)
    (ident
      (reg
        (word)))
    (macro_arg_def
      (ident
        (reg
          (word)))))
  (instruction
    (word)
    (ident
      (reg
        (word)))
    (ptr
      (reg
        (word))
      (scale
        (macro_arg))))
  (meta
    (meta_ident)))
